testdata/baselines/reference/submodule/conformance/asyncArrowFunction9_es6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
asyncArrowFunction9_es6.ts(1,11): error TS2304: Cannot find name 'async'.
asyncArrowFunction9_es6.ts(1,18): error TS2304: Cannot find name 'a'.
asyncArrowFunction9_es6.ts(1,37): error TS1005: ',' expected.
asyncArrowFunction9_es6.ts(1,46): error TS1005: ',' expected.
asyncArrowFunction9_es6.ts(1,53): error TS1109: Expression expected.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== asyncArrowFunction9_es6.ts (5 errors) ====
    var foo = async (a = await => await): Promise<void> => {
              ~~~~~
!!! error TS2304: Cannot find name 'async'.
                     ~
!!! error TS2304: Cannot find name 'a'.
                                        ~
!!! error TS1005: ',' expected.
                                                 ~
!!! error TS1005: ',' expected.
                                                        ~~
!!! error TS1109: Expression expected.
    }